--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-<h1><%= @title %></h1>
+<h1>Cough Medines!</h1>
+<ul>
+  <% @cough_medicines.each do |cough_medicine| %>
+    <li>
+      <a href="/cough_medicines/<%=cough_medicine.id%>"><%= cough_medicine.name %></a>
+    </li>
+  <% end %>
+</ul>
